# mlops_hatespeech

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  README.md  cloudbuild.yaml  cloudbuild_data.yaml  cloudbuild_evaluate.yaml  codecov.yml  config.yaml  create_load_onnx.py  data.dvc  index.html  mkdocs.yaml  models.dvc  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_tests.txt  run_onnx_model.py  tasks.py  vertex_ai_train.yaml  vertex_config.yaml  vertex_config_data.yaml  vertex_config_evaluate.yaml  vertex_train_start.yaml
.dvc/: config
.github/: deploy_docs.yaml
.github/workflows/: cml_data.yaml  deploy_docs.yaml  tests.yaml
cloud/: cloudbuild_app.yaml  cloudbuild_data.yaml  cloudbuild_evaluate.yaml  cloudbuild_train.yaml  vertex_config_data.yaml  vertex_config_evaluate.yaml  vertex_config_train.yaml  vertex_train_start.yaml
configs/: sweep.yaml
data/: processed.dvc
data/processed/test/: state.json  (+14 more)
dockerfiles/: app.dockerfile  bento.dockerfile  data.dockerfile  evaluate.dockerfile  frontend.dockerfile  train.dockerfile
docs/: index.md
docs/source/: docs.md  my_api.md
logs/: run1.dvc
reports/: README.md  report.html  report.py
search/: search_index.json
source/docs/: index.html
source/my_api/: index.html
src/mlops_hatespeech/: api.py  app.py  bentoml_service.py  create_onnx.py  data.py  dataset_statistics.py  drift_detector.py  evaluate.py  frontend.py  logger.py  model.py  train.py
testdata/: testfile.txt.dvc
tests/: test_data.py  test_model.py
tests/intergrationtests/: test_api.py
(+29 files in other folders)
